--- a/.github/workflows/ci-arm64ec-wine.yml
+++ b/.github/workflows/ci-arm64ec-wine.yml
@@ -10,40 +10,30 @@ jobs:
     runs-on: ubuntu-24.04
 
     env:
-      LLVM_MINGW_URL: https://github.com/mstorsjo/llvm-mingw/releases/download/20231128/llvm-mingw-20231128-ucrt-ubuntu-20.04-x86_64.tar.xz
+      LLVM_MINGW_URL: https://github.com/mstorsjo/llvm-mingw/releases/download/20251118/llvm-mingw-20251118-ucrt-ubuntu-22.04-x86_64.tar.xz
 
     steps:
       - name: Checkout Repository
         uses: actions/checkout@v4
 
-      - name: Setup ARM64-Compatible Repositories and Dependencies
+      - name: Install Host Build Dependencies
         run: |
           set -euo pipefail
-          echo "=== Настройка arm64 и репозиториев ==="
-
-          # Добавляем архитектуру arm64
-          sudo dpkg --add-architecture arm64
-
-          # Переключаемся на порты Ubuntu для arm64
-          sudo sed -i 's|http://archive.ubuntu.com/ubuntu/|http://ports.ubuntu.com/ubuntu-ports/|g' /etc/apt/sources.list
-          sudo sed -i 's|http://security.ubuntu.com/ubuntu|http://ports.ubuntu.com/ubuntu-ports/|g' /etc/apt/sources.list
-
+          echo "=== Installing host build dependencies ==="
           sudo apt-get update -y
-
-          echo "Установка зависимостей для хоста и кросс-компиляции"
           sudo apt-get install -y \
-            curl wget unzip pkgconf git cmake make \
+            curl wget git cmake make pkgconf \
             flex bison gettext \
             zlib1g-dev libfreetype6-dev libfontconfig1-dev \
             libx11-dev libxext-dev libxrender-dev libxml2-dev libssl-dev \
-            gcc-aarch64-linux-gnu g++-aarch64-linux-gnu \
-            libc6-dev-arm64-cross || echo "Пакет libc6-dev-arm64-cross пропущен (не критично)"
+            build-essential
 
       - name: Setup LLVM MinGW for ARM64EC
         run: |
-          wget $LLVM_MINGW_URL -O llvm-mingw.tar.xz
+          echo "=== Downloading LLVM‑MinGW 20251118 ==="
+          wget "$LLVM_MINGW_URL" -O llvm-mingw.tar.xz
           tar xf llvm-mingw.tar.xz
-          mv llvm-mingw-20231128-ucrt-ubuntu-20.04-x86_64 llvm-mingw
+          mv llvm-mingw-20251118-ucrt-ubuntu-22.04-x86_64 llvm-mingw
           echo "$PWD/llvm-mingw/bin" >> $GITHUB_PATH
 
       - name: Clone Wine 11 Source
@@ -57,12 +47,11 @@ jobs:
           make -j$(nproc) tools
           echo "WINE_TOOLS=$PWD/install/bin" >> $GITHUB_ENV
 
-      - name: Configure Wine Cross-Compile ARM64EC
+      - name: Configure Wine Cross‑Compile ARM64EC
         run: |
           mkdir wine-build
           cd wine-build
 
-          # Настройка компиляторов для ARM64EC через LLVM MinGW
           export CC="clang --target=aarch64-w64-mingw32 --sysroot=$PWD/../llvm-mingw"
           export CXX="clang++ --target=aarch64-w64-mingw32 --sysroot=$PWD/../llvm-mingw"
           export AR=aarch64-w64-mingw32-ar
@@ -88,7 +77,7 @@ jobs:
         working-directory: wine-build
         run: make -j$(nproc)
 
-      - name: Install Wine ARM64EC
+      - name: Install Wine ARM64EC Staging
         working-directory: wine-build
         run: make DESTDIR=$PWD/../image install
 
@@ -97,7 +86,6 @@ jobs:
           mkdir -p image/opt
           mv image/opt/wine-arm64ec Wine-11.1-ARM64EC
 
-          # Manifest
           cat <<EOF > Wine-11.1-ARM64EC/info.json
           {
             "name": "Wine-11.1-ARM64EC",
@@ -108,15 +96,13 @@ jobs:
           }
           EOF
 
-          # Environment wrapper
-          cat <<'EOF' > Wine-11.1-ARM64EC/env.sh
+          cat << 'EOF' > Wine-11.1-ARM64EC/env.sh
           #!/bin/sh
           export WINEDEBUG="-all"
           export WINE_ENABLE_ARM64EC=1
           EOF
           chmod +x Wine-11.1-ARM64EC/env.sh
 
-          # Pack into .wcp
           tar -cJf ../../wine-arm64ec.wcp Wine-11.1-ARM64EC
 
       - name: Upload Artifact
