--- a/.github/workflows/ci-arm64ec-wine.yml
+++ b/.github/workflows/ci-arm64ec-wine.yml
@@ -10,7 +10,7 @@ jobs:
     runs-on: ubuntu-24.04
 
     env:
-      LLVM_MINGW_URL: https://github.com/mstorsjo/llvm-mingw/releases/download/20251118/llvm-mingw-20251118-ucrt-ubuntu-22.04-x86_64.tar.xz
+      LLVM_MINGW_URL: https://github.com/mstorsjo/llvm-mingw/releases/download/20240218/llvm-mingw-20240218-ucrt-ubuntu-24.04-x86_64.tar.xz
 
     steps:
       - name: Checkout Repository
@@ -19,21 +19,27 @@ jobs:
       - name: Install Host Build Dependencies
         run: |
           set -euo pipefail
-          echo "=== Installing host build dependencies ==="
+          # Поддержка 32-bit и ARM64 cross
+          sudo dpkg --add-architecture i386
+          sudo dpkg --add-architecture arm64
           sudo apt-get update -y
+
           sudo apt-get install -y \
             curl wget git cmake make pkgconf \
             flex bison gettext \
             zlib1g-dev libfreetype6-dev libfontconfig1-dev \
             libx11-dev libxext-dev libxrender-dev libxml2-dev libssl-dev \
-            build-essential
+            build-essential \
+            libc6-dev:i386 libstdc++-dev:i386 \
+            gcc-aarch64-linux-gnu g++-aarch64-linux-gnu \
+            libc6-dev:arm64 libstdc++-dev:arm64 \
+            clang lld
 
       - name: Setup LLVM MinGW for ARM64EC
         run: |
-          echo "=== Downloading LLVM‑MinGW 20251118 ==="
-          wget "$LLVM_MINGW_URL" -O llvm-mingw.tar.xz
+          wget $LLVM_MINGW_URL -O llvm-mingw.tar.xz
           tar xf llvm-mingw.tar.xz
-          mv llvm-mingw-20251118-ucrt-ubuntu-22.04-x86_64 llvm-mingw
+          mv llvm-mingw-20240218-ucrt-ubuntu-24.04-x86_64 llvm-mingw
           echo "$PWD/llvm-mingw/bin" >> $GITHUB_PATH
 
       - name: Clone Wine 11 Source
@@ -47,7 +53,7 @@ jobs:
           make -j$(nproc) tools
           echo "WINE_TOOLS=$PWD/install/bin" >> $GITHUB_ENV
 
-      - name: Configure Wine Cross‑Compile ARM64EC
+      - name: Configure Wine Cross-Compile ARM64EC
         run: |
           mkdir wine-build
           cd wine-build
@@ -77,7 +83,7 @@ jobs:
         working-directory: wine-build
         run: make -j$(nproc)
 
-      - name: Install Wine ARM64EC Staging
+      - name: Install Wine ARM64EC
         working-directory: wine-build
         run: make DESTDIR=$PWD/../image install
 
@@ -86,6 +92,7 @@ jobs:
           mkdir -p image/opt
           mv image/opt/wine-arm64ec Wine-11.1-ARM64EC
 
+          # Manifest
           cat <<EOF > Wine-11.1-ARM64EC/info.json
           {
             "name": "Wine-11.1-ARM64EC",
@@ -96,13 +103,15 @@ jobs:
           }
           EOF
 
-          cat << 'EOF' > Wine-11.1-ARM64EC/env.sh
+          # Environment wrapper
+          cat <<'EOF' > Wine-11.1-ARM64EC/env.sh
           #!/bin/sh
           export WINEDEBUG="-all"
           export WINE_ENABLE_ARM64EC=1
           EOF
           chmod +x Wine-11.1-ARM64EC/env.sh
 
+          # Pack into .wcp
           tar -cJf ../../wine-arm64ec.wcp Wine-11.1-ARM64EC
 
       - name: Upload Artifact
