Enhance CI workflow for ARM64EC Wine build
Updated CI workflow for ARM64EC Wine build by adding caching for LLVM MinGW and Wine tools, and adjusting installation steps for dependencies.

--- a/.github/workflows/ci-arm64ec-wine.yml
+++ b/.github/workflows/ci-arm64ec-wine.yml
@@ -16,65 +16,65 @@ jobs:
       - name: Checkout Repository
         uses: actions/checkout@v4
 
-      - name: Install Host Build Dependencies
+      - name: Cache LLVM MinGW
+        uses: actions/cache@v3
+        with:
+          path: llvm-mingw
+          key: llvm-mingw-20251118
+          restore-keys: llvm-mingw-
+
+      - name: Install Host Build Dependencies (x86_64 + i386)
         run: |
           set -euo pipefail
-          echo "=== Installing host build dependencies ==="
+          echo "=== Adding architectures and updating repositories ==="
           sudo dpkg --add-architecture i386
           sudo apt-get update -y
+          
+          echo "=== Installing 64-bit libraries ==="
           sudo apt-get install -y \
             curl wget git cmake make pkgconf \
             flex bison gettext \
             zlib1g-dev libfreetype6-dev libfontconfig1-dev \
             libx11-dev libxext-dev libxrender-dev libxml2-dev libssl-dev \
             build-essential gcc-multilib g++-multilib \
-            clang lld \
-            libc6-dev-i386 lib32stdc++6
+            clang lld
 
-      - name: Cache LLVM MinGW
-        uses: actions/cache@v3
-        id: llvm_cache
-        with:
-          path: llvm-mingw
-          key: llvm-mingw-${{ env.LLVM_MINGW_URL }}-v1
-          restore-keys: |
-            llvm-mingw-
+          echo "=== Installing 32-bit libraries ==="
+          sudo apt-get install -y \
+            libc6-dev-i386 lib32stdc++6 \
+            libfreetype6-dev:i386 libfontconfig1-dev:i386 \
+            libx11-dev:i386 libxext-dev:i386 libxrender-dev:i386 \
+            libssl-dev:i386
 
       - name: Setup LLVM MinGW for ARM64EC
-        if: steps.llvm_cache.outputs.cache-hit != 'true'
+        if: steps.cache.outputs.cache-hit != 'true'
         run: |
           echo "=== Downloading LLVM‑MinGW 20251118 ==="
           wget "$LLVM_MINGW_URL" -O llvm-mingw.tar.xz
           tar xf llvm-mingw.tar.xz
           mv llvm-mingw-20251118-ucrt-ubuntu-22.04-x86_64 llvm-mingw
-      - name: Add LLVM MinGW to PATH
-        run: echo "$PWD/llvm-mingw/bin" >> $GITHUB_PATH
+          echo "$PWD/llvm-mingw/bin" >> $GITHUB_PATH
+
+      - name: Cache Wine-tools
+        uses: actions/cache@v3
+        with:
+          path: wine-tools-build/install
+          key: wine-tools-11.1
 
       - name: Clone Wine 11 Source
         run: git clone --depth 1 --branch wine-11.1 https://gitlab.winehq.org/wine/wine.git wine-src
 
-      - name: Cache Wine Tools
-        uses: actions/cache@v3
-        id: wine_tools_cache
-        with:
-          path: wine-tools-build/install
-          key: wine-tools-${{ hashFiles('wine-src/**') }}-v1
-          restore-keys: |
-            wine-tools-
-
       - name: Build Wine Tools (Host x86_64)
-        if: steps.wine_tools_cache.outputs.cache-hit != 'true'
         run: |
           mkdir -p wine-tools-build
           cd wine-tools-build
           ../wine-src/configure --disable-tests --without-x --prefix=$PWD/install
-          make -j$(nproc)
-      - name: Export Wine Tools path
-        run: echo "WINE_TOOLS=$PWD/wine-tools-build/install/bin" >> $GITHUB_ENV
+          make -j$(nproc) tools
+          echo "WINE_TOOLS=$PWD/install/bin" >> $GITHUB_ENV
 
       - name: Configure Wine Cross‑Compile ARM64EC
         run: |
-          mkdir wine-build
+          mkdir -p wine-build
           cd wine-build
 
           export CC="clang --target=aarch64-w64-mingw32 --sysroot=$PWD/../llvm-mingw"
@@ -102,7 +102,7 @@ jobs:
         working-directory: wine-build
         run: make -j$(nproc)
 
-      - name: Install Wine ARM64EC
+      - name: Install Wine ARM64EC Staging
         working-directory: wine-build
         run: make DESTDIR=$PWD/../image install
 
