Refactor CI workflow for Wine ARM64EC build
Removed i386 architecture installation and updated dependencies for Wine ARM64EC build.

--- a/.github/workflows/ci-arm64ec-wine.yml
+++ b/.github/workflows/ci-arm64ec-wine.yml
@@ -25,16 +25,13 @@ jobs:
 
       - name: Install Host Build Dependencies
         run: |
-          set -euo pipefail
-          sudo dpkg --add-architecture i386
           sudo apt-get update -y
           sudo apt-get install -y \
             curl wget git cmake make pkgconf \
             flex bison gettext \
-            zlib1g-dev libfreetype6-dev libfreetype6-dev:i386 \
-            libfontconfig1-dev libx11-dev libxext-dev libxrender-dev libxml2-dev libssl-dev \
-            build-essential gcc-multilib g++-multilib \
-            clang lld libc6-dev-i386 lib32stdc++6
+            zlib1g-dev libfreetype6-dev libfontconfig1-dev \
+            libx11-dev libxext-dev libxrender-dev libxml2-dev libssl-dev \
+            build-essential clang lld
 
       - name: Setup LLVM MinGW
         if: steps.cache.outputs.cache-hit != 'true'
@@ -55,7 +52,7 @@ jobs:
           make -j$(nproc) tools
           echo "WINE_TOOLS=$PWD/install/bin" >> $GITHUB_ENV
 
-      - name: Configure & Build Wine ARM64EC
+      - name: Configure & Build Wine ARM64EC (64-bit only)
         run: |
           mkdir -p wine-build
           cd wine-build
@@ -72,6 +69,7 @@ jobs:
           ../wine-src/configure \
             --host=aarch64-w64-mingw32 \
             --with-wine64 \
+            --disable-win32 \
             --with-wine-tools=$WINE_TOOLS \
             --with-mingw=clang \
             --prefix=/opt/wine-arm64ec \
